--- a/style.css
+++ b/style.css
@@ -90,3 +90,12 @@ p.letter{
         font-size: 20px;
     }
 }
+
+p.credit{
+    position: absolute;
+    top: 30;
+    left: 34%;
+    bottom: 0;
+    right: 0;
+    font-size: small;
+}
